hphp/test/slow/error_handler/1372.php.expectf
HipHop Fatal error: Class undefined: Foo in %s on line 11
Error
